--- a/App.Endpoints.API/App.Endpoints.API.csproj
+++ b/App.Endpoints.API/App.Endpoints.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.Contracts\App.Contracts.csproj" />
+    <ProjectReference Include="..\App.Infrustructure\App.Infrustructure.csproj" />
     <ProjectReference Include="..\App.Services\App.Services.csproj" />
   </ItemGroup>
 
