--- a/App.Infrustructure/App.Infrustructure.csproj
+++ b/App.Infrustructure/App.Infrustructure.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\App.Services\App.Services.csproj" />
+  </ItemGroup>
+
 </Project>
